Added more dummy text

--- a/Views/home.pug
+++ b/Views/home.pug
@@ -18,24 +18,24 @@ block content
         div.card-box
           div.card-img
             img(src="/static/img/1.png")
-            div.card-content
-              p This is the best dance academy of the universe
+          div.card-content
+            p This is the best dance academy of the universe Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, consequatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis a suscipit minima, eum dolor consectetur!
 
       div.card
         h3 Dance the way you like
         div.card-box
-          iv.card-img
+          div.card-img
             img(src="/static/img/2.png")
-            div.card-content
-              p This is the best dance academy of the universe
+          div.card-content
+            p This is the best dance academy of the universe Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, perferendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo dolor praesentium deserunt et facere sunt.
 
       div.card
         h3 Expert Teaching
         div.card-box
           div.card-img
             img(src="/static/img/3.png")
-            div.card-content
-              p This is the best dance academy of the universe
+          div.card-content
+            p This is the best dance academy of the universe Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolor itaque labore eius quo aliquid.
       section#sponsersSection
         h1 Our Sponsers
         #sponsers
